<resources>
    <string name="app_name">InstaNotes</string>

    <!-- Swipe-left menu -->
    <string name="nav_header">Options</string>
    <string name="menu_option_notes">Notes</string>
    <string name="menu_option_camera">Camera</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_about">About</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="logout_button_text">Sign out</string>
    <string name="camera_access_text">InstaNotes has permission to access your camera</string>
    <string name="camera_roll_access_text">InstaNotes has permission to access your camera roll</string>
    <string name="logged_in_as">You are signed in as <b>example@gmail.com</b></string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
