<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_option_notes" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_add_a_note"
            android:title="@string/menu_option_camera" />
        <!--<item-->
            <!--android:id="@+id/nav_training"-->
            <!--android:icon="@drawable/ic_handwriting_training"-->
            <!--android:title="Handwriting training" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_option_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_option_about" />
    </group>
</menu>
