<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:theme="@style/custom_toolbar" />
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--/>-->

        <!--<SearchView-->
            <!--android:layout_width="210dp"-->
            <!--android:layout_height="55dp"-->
            <!--android:layout_gravity="end"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textColorPrimary="@android:color/white"-->
            <!--android:textColorSecondary="@android:color/white"-->
            <!--android:queryHint="Search notes" />-->

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            android:text="@string/settings_title"
            android:textColor="@color/colorHeaderText"
            android:textSize="30sp"/>

        <Switch
            android:id="@+id/camera_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="150dp" />

        <Switch
            android:id="@+id/camera_roll_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="220dp"
            android:color="@color/colorPrimary"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:text="@string/logout_button_text"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/camera_access_text_view"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/camera_access_text"
            android:layout_gravity="start"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="150dp"
            android:color="@color/colorText"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/camera_roll_access_text_view"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/camera_roll_access_text"
            android:layout_gravity="start"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="220dp"
            android:color="@color/colorText"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/logged_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logged_in_as"
            android:layout_marginTop="310dp"
            android:color="@color/colorText"
            android:textSize="17sp" />

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>
